# seaturtle_flowchart

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/reader/: stfc.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/reader/: stfc.html
docs/reader/: stfc.rst
seaturtle_flowchart/: __init__.py  __version__.py
seaturtle_flowchart/reader/: __init__.py  stfc.py
tests/: input.stfc  test_stfc.py
